# feel-the-cnn-rhythm

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  benchmark.md  demo.py  pyproject.toml
cnntab/: __init__.py  data_generation.py  ftr.py  heatmap.py  resenet2.py  resnet.py  st.py
data/: data2folder.py
docker/: build.sh  docker-compose.yml  pytorch.Dockerfile  run.sh  tensorflow.Dockerfile
docker/jupyter/notebooks/: Untitled.ipynb
tb_logs/default/version_0/: events.out.tfevents.1630843755.3090.5605.0  hparams.yaml
tb_logs/default/version_1/: events.out.tfevents.1630844127.3090.7008.1
tb_logs/default/version_2/: events.out.tfevents.1630845800.3090.28412.0
tb_logs/default/version_3/: events.out.tfevents.1630846327.3090.29484.1
tb_logs/default/version_4/: events.out.tfevents.1630847127.3090.54211.1
