[tool.poetry]
name = "feel-the-cnn-rhythm"
version = "0.1.0"
description = "Functions to train CNNs on tabular data"
authors = ["adimyth <mishraaditya6991@gmail.com>", "sharad30 <sharad30.ss@gmail.com>", "soumendra <soumendra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pandas = "^1.3.1"
numpy = "^1.21.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.1"
streamlit = "^0.86.0"
tqdm = "^4.62.1"
pre-commit = "^2.14.0"
data-science-types = "^0.2.23"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
